--- a/build.toml
+++ b/build.toml
@@ -3,7 +3,7 @@ build_output_dir = 'Built'
 archive_location = 'C:\\Users\\mbilyk\\Documents\\CustomDevice-CI-Test'
 
 [projects.cd]
-path = 'Source\MyCustomDevice.lvproj'
+path = 'Source\CD_CI_Test Custom Device.lvproj'
 
 [[build.steps]]
 name = 'Build My Custom Device'
