--- a/Source/Tests/System/Assets/config.ini
+++ b/Source/Tests/System/Assets/config.ini
@@ -1,4 +1,5 @@
 [Overrides]
+"Targets/Local/Hardware/Chassis/DAQ/DigitalSim_Read/Product Name" = "PXIe-6124"
 
 [Properties]
 "Test Value" = "123.456789"
